Reajuateb de fonte

--- a/index.html
+++ b/index.html
@@ -13,27 +13,27 @@
 <body>
     <section class="introduction">
         <h1>Com desemprego record e sem Auxílio, alta do PIB no 1º trimestre só foi sentida por parte da população</h1>
-        <h4 id="subtitle"><b id="normal">Nem todo brasileiro sentiu os efeitos do crescimento da atividade econômica demonstrado pela alta do PIB. Com desemprego recorde, milhões de pessoas seguem sem renda – e sem consumir – no país.</b></h4>
-        <h6 id="infoEditor"><b>Por Daniel Silveira, G1 - </b><b id="normal">Rio de Janeiro</b></h6>
-        <small><b id="normal"> 01/06/2021 09h29 Atualizado há 5 horas</b></small> 
+        <h4 id="subtitle"><b id="normal">Nem todo brasileiro sentiu os efeitos do crescimento da atividade econômica demonstrado pela alta do PIB. Com desemprego recorde, milhões de pessoas seguem sem renda – e sem consumir – no país.</h4>
+        <h6 id="infoEditor"><b>Por Daniel Silveira, G1 - </b>Rio de Janeiro</h6>
+        <small>01/06/2021 09h29 Atualizado há 5 horas</small> 
     </section>
     <hr>
     <main>
-        <p><b id="normal"> A economia brasileira voltou a crescer nos primeiros três meses de 2021: segundo dados divulgados nesta terça-feira (1º) pelo IBGE, </b><b id="red">a alta foi de 1,2% sobre o trimestre anterior</b>.<b id="normal">A expansão, no entanto, foi bastante desigual – e seus efeitos não foram disseminados entre a população, deixando de fora especialmente a classe de renda mais baixa.</b></p>
+        <p>A economia brasileira voltou a crescer nos primeiros três meses de 2021: segundo dados divulgados nesta terça-feira (1º) pelo IBGE, <b id="red">a alta foi de 1,2% sobre o trimestre anterior</b>.A expansão, no entanto, foi bastante desigual – e seus efeitos não foram disseminados entre a população, deixando de fora especialmente a classe de renda mais baixa.</p>
         <ul>
             <li><b id="red">PIB do Brasil cresce 1,2% no 1º trimestre e volta ao patamar pré-pandemia</b></li>
             <li><b id="red">Veja 5 fatores que explicam a surpresa com o PIB do 1º trimestre e 5 pontos de preocupação</b></li>
             <li><b id="red">Novas rodadas do Pronampe e Auxílio Emergencial teriam contribuído para PIB ainda mais forte, avaliam analistas</b></li>
         </ul>
-        <p><b>Apesar da criação de vagas formais ao longo do trimestre, o <b id='red'>desemprego seguiu batendo recordes</b>: em março, eram 14,8 milhões de brasileiros sem trabalho. E sem a ajuda do <b id='red'>Auxílio Emergencial</b> (que só voltou a ser pago, e em valores reduzidos, em abril deste ano), milhões de brasileiros seguem sem conseguir melhorar seus patamares de consumo – segundo os dados do PIB, o consumo das famílias recuou 0,1% de janeiro a março, após dois trimestres de crescimento.</b></p>
-        <p><b>Com a recuperação desigual, alguns brasileiros já comemoram a saída da crise, enquanto outros conseguem ver a luz no fim desse túnel já no segundo trimestre. Para muitos, no entanto, a retomada ainda parece distante. </b></p>
-        <h3><b>Conheça a história de alguns deles </b></h3>
-        <h2><b>Sem emprego e sem auxílio</b></h2>
-        <p><b>O pizzaiolo Alexsandro Melo de Oliveira, de 35 anos, viu a situação financeira de sua família se agravar ainda mais entre janeiro e março. Sua jornada de trabalho integral foi restabelecida em janeiro – ele passou oito meses com carga horária reduzida, assim como o salário. Mas sua esposa, Cristiane Gomes, de 39 anos, trabalhadora doméstica desempregada desde o começo da pandemia, ficou sem o auxílio emergencial do governo, suspenso nos três primeiros meses do ano.</b></p>
+        <p>Apesar da criação de vagas formais ao longo do trimestre, o <b id='red'>desemprego seguiu batendo recordes</b>: em março, eram 14,8 milhões de brasileiros sem trabalho. E sem a ajuda do <b id='red'>Auxílio Emergencial</b> (que só voltou a ser pago, e em valores reduzidos, em abril deste ano), milhões de brasileiros seguem sem conseguir melhorar seus patamares de consumo – segundo os dados do PIB, o consumo das famílias recuou 0,1% de janeiro a março, após dois trimestres de crescimento.</b></p>
+        <p>Com a recuperação desigual, alguns brasileiros já comemoram a saída da crise, enquanto outros conseguem ver a luz no fim desse túnel já no segundo trimestre. Para muitos, no entanto, a retomada ainda parece distante. </b></p>
+        <h3>Conheça a história de alguns deles </h3>
+        <h2>Sem emprego e sem auxílio</h2>
+        <p>O pizzaiolo Alexsandro Melo de Oliveira, de 35 anos, viu a situação financeira de sua família se agravar ainda mais entre janeiro e março. Sua jornada de trabalho integral foi restabelecida em janeiro – ele passou oito meses com carga horária reduzida, assim como o salário. Mas sua esposa, Cristiane Gomes, de 39 anos, trabalhadora doméstica desempregada desde o começo da pandemia, ficou sem o auxílio emergencial do governo, suspenso nos três primeiros meses do ano.</p>
     </main>
     <article>
         <div class="line-vertical"></div>
-        <p id="citacao"><b>“Minha mulher ficar desempregada logo que começou a pandemia me arrebentou muito, porque ficamos só com meu salário de pizzaiolo. Por pouco a gente passou necessidade. Quando ela começou a receber o auxílio do governo, deu uma melhoradinha e ele fez muita falta no começo do ano”, contou.</b></p>
+        <p id="citacao">“Minha mulher ficar desempregada logo que começou a pandemia me arrebentou muito, porque ficamos só com meu salário de pizzaiolo. Por pouco a gente passou necessidade. Quando ela começou a receber o auxílio do governo, deu uma melhoradinha e ele fez muita falta no começo do ano”, contou.</p>
     </article>
 
 </body>
